--- a/test-output/old/nopCommerceV1/classes.html
+++ b/test-output/old/nopCommerceV1/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.testCases.TC_LoginTestDDT_002</td>
+<td>com.nopcommerce.testCases.TC_AddCustomerTestDDT_004</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginTest</td>
+<td>addNewCustomer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
