--- a/test-output/old/nopCommerceV1/methods-alphabetical.html
+++ b/test-output/old/nopCommerceV1/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopCommerceV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="689a9e">  <td>22/11/24 09:27:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_SearchCustomerWithInvalidEmailDDT_007.searchCustomer(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_SearchCustomerWithInvalidEmailDDT_007@6fa51cd4]">searchCustomer</td> 
-  <td>main@1517640897</td>   <td></td> </tr>
-<tr bgcolor="d367f1">  <td>22/11/24 09:27:44</td>   <td>-6114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_SearchCustomerWithInvalidEmailDDT_007@6fa51cd4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1517640897</td>   <td></td> </tr>
-<tr bgcolor="d367f1">  <td>22/11/24 09:28:01</td>   <td>11181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_SearchCustomerWithInvalidEmailDDT_007@6fa51cd4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1517640897</td>   <td></td> </tr>
+<tr bgcolor="689a9e">  <td>22/11/24 10:46:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@1349883]">loginTest</td> 
+  <td>main@507911745</td>   <td></td> </tr>
+<tr bgcolor="d367f1">  <td>22/11/24 10:45:59</td>   <td>-7857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@1349883]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@507911745</td>   <td></td> </tr>
+<tr bgcolor="d367f1">  <td>22/11/24 10:46:24</td>   <td>16174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@1349883]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@507911745</td>   <td></td> </tr>
 </table>
